--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
